--- a/momentum/index.html
+++ b/momentum/index.html
@@ -5,14 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momentum App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
-    <div class="hello">
-        <h1 class="sexy-font">Grab me!</h1>
+<body class="bg">
+    <h2 id="clock">00:00:00</h2>
+    <form id="login-form" class="hidden">
+        <input required maxlength="15" type="text" placeholder="What is your name" />
+        <input type="submit" value="Log in" /> <!--button 과같음"-->
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press enter" required />
+    </form>
+    <ul id="todo-list"></ul>
+    <div id="quote">
+        <span></span>
+        <span></span>
     </div>
-    <script src="app.js"></script>
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+    <!-- <a href="https://nomadcoders.co/courses">Go to courses</a> -->
+    <script src="js/greeting.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
+
 </body>
 
 </html>
